[package]
name = "cfg-vis"
version = "0.2.0"
edition = "2021"
authors = ["TOETOE55 <584605539@qq.com>"]
readme = "README.md"
license = "MIT"
keywords = ["macro", "cfg"]
repository = "https://github.com/TOETOE55/cfg-vis"
description = """
A macro to support `#[cfg()]` on visibility.
"""


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
